--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-title: TASK-MATS
-logo: assets/logos/logo.png
-description: Task Adaptation with Shared Knowledge for Multi-Agent Teaming Systems
+title: Alexis Ellis
+# logo: assets/logos/logo.png
+description: me
 show_downloads: false
-
-
